apps/production/homepage-ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
spec:
  tls:
    - hosts:
        - &host fanen.dk
  rules:
    - host: *host
