apps/production/jellyfin-ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
spec:
  tls:
    - hosts:
        - &host jellyfin.fanen.dk
  rules:
    - host: *host
