apps/production/radarr-ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
spec:
  tls:
    - hosts:
        - &host radarr.fanen.dk
  rules:
    - host: *host
