apps/production/sonarr-ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
spec:
  tls:
    - hosts:
        - &host sonarr.fanen.dk
  rules:
    - host: *host
