apps/production/transmission-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
spec:
  tls:
    - hosts:
        - &host transmission.fanen.dk
  rules:
    - host: *host
